--- a/backend/.env
+++ b/backend/.env
@@ -2,3 +2,6 @@
 DB_CONNECT = mongodb+srv://First-user:firstuser1234@cluster0.r2y3r.mongodb.net/Poc?retryWrites=true&w=majority
 
 TOKEN_SECRET = viscaelbarca
+
+EMAIL_ADDRESS : bhutani.sachin1019@gmail.com
+PASSWORD: Sachin@123456
