--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
 
-DB_CONNECT = mongodb+srv://First-user:firstuser1234@cluster0.r2y3r.mongodb.net/Poc?retryWrites=true&w=majority
+DB_CONNECT_CLOUD = mongodb+srv://First-user:firstuser1234@cluster0.r2y3r.mongodb.net/Poc?retryWrites=true&w=majority
+
+DB_CONNECT = mongodb://localhost:27017/POC
 
 TOKEN_SECRET = viscaelbarca
 
