--- a/backend/.env
+++ b/backend/.env
@@ -5,5 +5,8 @@ DB_CONNECT = mongodb://localhost:27017/POC
 
 TOKEN_SECRET = viscaelbarca
 
-EMAIL_ADDRESS : bhutani.sachin1019@gmail.com
-PASSWORD: Sachin@123456
+EMAIL_ADDRESS = 
+PASSWORD = 
+
+
+
