--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "bootstrap": "^5.0.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.0",
     "react-cookies": "^0.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
