--- a/backend/.env
+++ b/backend/.env
@@ -5,8 +5,7 @@ DB_CONNECT = mongodb://localhost:27017/POC
 
 TOKEN_SECRET = viscaelbarca
 
-EMAIL_ADDRESS = 
-PASSWORD = 
+APIKEY = w6sAD904S72LzTQFr23HuQ.Ya5YniCPmPsgFUhAl13GqrSzt76gV2DtWojgd7L0UAk
 
 
 
